fix: jackson java8 compatibility